fixed out of memory issue of scalatest